--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "standard"],
     "rules": {
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "@next/next/no-img-element": "off"
   }
 }
