--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
