--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
