--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@tanstack/react-query": "^4.12.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
