--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-simply-carousel": "^8.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
